src/objects/Alternative_Addresses__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alternative Addresses</relationshipLabel>
        <relationshipName>Alternative_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attn__c</fullName>
        <label>Attn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FourthShift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pivotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bid Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Alternative Address</label>
    <nameField>
        <label>Alternative Addresses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternative Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_1_Bill_To_per_account</fullName>
        <active>true</active>
        <description>Only 1 Bill To Type is allowed per account</description>
        <errorConditionFormula>AND(  ISPICKVAL(Type__c ,&apos;Bill To&apos;) ,  Account__r.Has_Bill_To__c ==1)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>ONLY ONE &quot;BILL TO&quot; ALLOWED per account</errorMessage>
    </validationRules>
</CustomObject>